--- a/about.html
+++ b/about.html
@@ -44,19 +44,43 @@
     </div>
   </div>
 
+  <header class="header-area header-sticky d-md-none">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="index.html" class="logo">L'Avatar<em>National</em></a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
+            <ul class="nav">
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="about.html" class="active">À Propos</a></li>
+              <li><a href="tickets.html">Billets</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <a class='menu-trigger'>
+              <span>Menu</span>
+            </a>
+            <!-- ***** Menu End ***** -->
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
+  <header class="header-area header-sticky d-md-block d-none">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Début du Menu ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Accueil</a></li>
-              <li><a href="about.html">À Propos</a></li>
-              <li><a href="shows-events.html">Spectacles & Événements</a></li>
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="about.html" class="active">À Propos</a></li>
               <li><a href="tickets.html">Billets</a></li>
-              <li><a href="rent-venue.html">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
             <!-- ***** Fin du Menu ***** -->
           </nav>
@@ -196,10 +220,10 @@
         </div>
         <div class="menu">
           <ul>
-            <li><a href="index.html" class="active">Accueil</a></li>
-            <li><a href="about.html">À propos</a></li>
-            <li><a href="shows-events.html">Spectacles & Événements</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html" class="active">À Propos</a></li>
             <li><a href="tickets.html">Billets</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <p class="copyright">Copyright © 2025 One Man Show Cédric Akomou</p>
