--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
 
@@ -67,10 +67,10 @@ https://www.tooplate.com/view/2125-artxibition
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Accueil</a></li>
+              <li><a href="index.html">Accueil</a></li>
               <li><a href="about.html">À Propos</a></li>
               <li><a href="tickets.html">Billets</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -82,37 +82,6 @@ https://www.tooplate.com/view/2125-artxibition
     </div>
   </header>
 
-  <!-- ***** Main Banner Area Start ***** -->
-  <div class="main-banner">
-    <div class="counter-content">
-      <ul>
-        <li>Jours<span id="days"></span></li>
-        <li>Heures<span id="hours"></span></li>
-        <li>Minutes<span id="minutes"></span></li>
-        <li>Secondes<span id="seconds"></span></li>
-      </ul>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="main-content">
-            <div class="next-show">
-              <i class="fa fa-arrow-up"></i>
-              <span>Prochain spectacle</span>
-            </div>
-            <h6>Ouverture le vendredi 29 août 2025</h6>
-            <h2>One Man Show de Cédric AKOMOU : L'Avatar National</h2>
-            <div class="main-white-button">
-              <a href="https://wa.me/+2290162986183?text=Bonjour%2C%20je%20suis%20intéressé%20par%20le%20sponsoring%20du%20One%20Man%20Show%20de%20Cédric%20AKOMOU.%20Pouvez-vous%20m%27envoyer%20plus%20d%27informations%20%3F"
-                target="_blank">Devenir Sponsor</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Main Banner Area End ***** -->
-
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky d-md-block d-none">
     <div class="container">
@@ -121,10 +90,10 @@ https://www.tooplate.com/view/2125-artxibition
           <nav class="main-nav">
             <!-- ***** Début du Menu ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Accueil</a></li>
+              <li><a href="index.html">Accueil</a></li>
               <li><a href="about.html">À Propos</a></li>
               <li><a href="tickets.html">Billets</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <!-- ***** Fin du Menu ***** -->
           </nav>
@@ -134,89 +103,62 @@ https://www.tooplate.com/view/2125-artxibition
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <!-- *** Amazing Venus ***-->
-  <div class="amazing-venues">
+  <!-- ***** About Us Page ***** -->
+  <div class="page-heading-rent-venue">
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
-          <div class="left-content">
-            <h4>Un spectacle inoubliable à venir</h4>
-            <p>Rejoignez-nous pour le one-man-show de Cédric Akomou, <strong>"L'Avatar National"</strong>, un spectacle
-              hilarant qui promet des moments de rire et d'émotion ! Pour plus d'informations, découvrez nos pages : <a
-                href="index.html">Accueil</a>, <a href="about.html">À propos</a>, <a href="shows-events.html">Spectacles
-                &
-                événements</a>, et <a href="tickets.html">Billets</a>.</p>
-            <br>
-            <p>Vous souhaitez sponsoriser cet événement unique ou obtenir plus de détails ? Contactez-nous via WhatsApp
-              au
-              <a href="https://wa.me/+2290162986183?text=Bonjour%2C%20je%20suis%20intéressé%20par%20le%20sponsoring%20du%20One%20Man%20Show%20de%20Cédric%20AKOMOU.%20Pouvez-vous%20m%27envoyer%20plus%20d%27informations%20%3F"
-                target="_blank">+229 01 62 98 61 83</a>. Restez à l'écoute pour les mises à jour sur le lieu et les
-              horaires !
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="right-content">
-            <h5><i class="fa fa-map-marker"></i> Lieu à confirmer</h5>
-            <span>Le lieu du spectacle sera annoncé prochainement.<br>Restez connectés pour plus d'informations !</span>
-            <div class="text-button"><a
-                href="https://wa.me/+2290162986183?text=Bonjour%2C%20je%20suis%20intéressé%20par%20le%20sponsoring%20du%20One%20Man%20Show%20de%20Cédric%20AKOMOU.%20Pouvez-vous%20m%27envoyer%20plus%20d%27informations%20%3F"
-                target="_blank">En savoir plus <i class="fa fa-arrow-right"></i></a></div>
-          </div>
+        <div class="col-lg-12">
+          <h2>Contactez-nous</h2>
+          <span>Remplissez le formulaire ci-dessous pour toute question ou demande concernant notre spectacle.</span>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- *** Map ***-->
-  <div class="map-image">
-    <img src="assets/images/map-image.jpg" alt="Maps of 3 Venues">
-  </div>
-
-
-  <!-- *** Venues & Tickets ***-->
-  <div class="venue-tickets">
-    <div class="container-fluid">
+  <div class="rent-venue-application">
+    <div class="container">
       <div class="row">
-        <!-- <div class="col-lg-12">
-          <div class="section-heading">
-            <h2>Our Venues & Tickets</h2>
+        <div class="col-lg-9">
+          <div class="heading-text">
+            <h4 class="text-white">Formulaire de contact</h4>
           </div>
-        </div> -->
-        <div class="col-lg-12">
-          <div class="event-item">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="left-content d-none">
-                  <h4>Monkey Dance Festival</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur do adipiscing eliterirt sed eiusmod alori...</p>
-                  <div class="main-dark-button"><a href="event-details.html">Discover More</a></div>
+          <div class="contact-form">
+            <form id="contact" action="" method="post">
+              <div class="row">
+                <div class="col-md-6 col-sm-12">
+                  <fieldset>
+                    <input name="name" type="text" id="name" placeholder="Votre nom*" required="">
+                  </fieldset>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                  <fieldset>
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Votre email*"
+                      required="">
+                  </fieldset>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                  <fieldset>
+                    <input name="phone-number" type="text" id="phone-number" placeholder="Numéro de téléphone"
+                      required="">
+                  </fieldset>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                  <fieldset>
+                    <input name="subject" type="text" id="subject" placeholder="Objet de votre message*" required="">
+                  </fieldset>
+                </div>
+                <div class="col-lg-12">
+                  <fieldset>
+                    <textarea name="message" rows="6" id="message" placeholder="Votre message*" required=""></textarea>
+                  </fieldset>
+                </div>
+                <div class="col-lg-12">
+                  <fieldset>
+                    <button type="submit" id="form-submit" class="main-dark-button">Envoyer le message</button>
+                  </fieldset>
                 </div>
               </div>
-              <div class="col-lg-4">
-                <div class="thumb">
-                  <img src="assets/images/event.jpg" alt="">
-                </div>
-              </div>
-              <div class="col-lg-4 d-none">
-                <div class="right-content">
-                  <ul>
-                    <li>
-                      <i class="fa fa-clock-o"></i>
-                      <h6>July 14 Friday<br>08:30 AM - 09:30 PM</h6>
-                    </li>
-                    <li>
-                      <i class="fa fa-map-marker"></i>
-                      <span>Copacabana Beach, Rio de Janeiro</span>
-                    </li>
-                    <li>
-                      <i class="fa fa-users"></i>
-                      <span>450 Total Guests Attending</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -263,16 +205,14 @@ https://www.tooplate.com/view/2125-artxibition
             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
-
         <div class="menu">
           <ul>
-            <li><a href="index.html" class="active">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
             <li><a href="tickets.html">Billets</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
           </ul>
         </div>
-
         <p class="copyright">Copyright © 2025 One Man Show Cédric Akomou</p>
       </div>
     </div>
@@ -296,12 +236,7 @@ https://www.tooplate.com/view/2125-artxibition
 
   <!-- Global Init -->
   <script src="assets/js/custom.js"></script>
-  <script>
-    // Get the current year
-    const currentYear = new Date().getFullYear();
-    // Set the year in the HTML
-    document.getElementById("year").textContent = currentYear;
-  </script>
+
 </body>
 
 </html>
